@startuml ZenithWeb_Dominio
' Diagrama de Clases - Modelo de Dominio (ZenithWeb)
' Atributos derivados del esquema PostgreSQL (backup.sql / crear_registro_inventario.sql)
' Metodos derivados de las operaciones reales en services/ y repositories/
' Render: https://www.plantuml.com/plantuml  o  extension PlantUML en VS Code

skinparam linetype ortho
skinparam classAttributeIconSize 0

class Usuario {
  +int id_usuario
  +string documento
  +string nombre_completo
  +string correo
  +string clave
  +int id_rol
  +bool estado
  +string rol
  --
  +login(correo, password) : Token
  +getPorCorreo(correo) : Usuario
  +tieneRol(rol) : bool
}

class Rol {
  +int id_rol
  +string descripcion
  +datetime fecha_creacion
  --
  +getPermisos() : Permiso[]
}

class Permiso {
  +int id_permiso
  +int id_rol
  +string nombre_menu
  --
  +perteneceA(rol) : bool
}

class Categoria {
  +int id_categoria
  +string descripcion
  +bool estado
  --
  +obtenerCategorias() : Categoria[]
}

class Producto {
  +int id_producto
  +string codigo
  +string nombre
  +string descripcion
  +int id_categoria
  +int stock
  +decimal precio_compra
  +decimal precio_venta
  +bool estado
  --
  +obtenerProductos(soloActivos) : Producto[]
  +getById(id) : Producto
  +crearProducto() : Producto
  +update(id) : Producto
  +remove(id) : void
  +setEstado(id, estado) : Producto
  +descuentaStock(cantidad) : int
}

class Venta {
  +int id_venta
  +int id_usuario
  +string tipo_documento
  +string documento_cliente
  +string nombre_cliente
  +decimal monto_pago
  +decimal monto_cambio
  +decimal monto_total
  +datetime fecha
  --
  +consultarVentas() : Venta[]
  +getById(id) : Venta
  +crearVenta(detalles) : Venta
}

class DetalleVenta {
  +int id_detalle_venta
  +int id_venta
  +int id_producto
  +decimal precio_venta
  +int cantidad
  +decimal subtotal
  +datetime fecha_registro
  --
  +calcularSubtotal() : decimal
}

class RegistroInventario {
  +int id_registro
  +int id_producto
  +string tipo
  +int cantidad
  +decimal total
  +int id_venta
  +int id_usuario
  +datetime fecha
  --
  +getAll() : RegistroInventario[]
  +getMovimientos(filtros) : RegistroInventario[]
  +registrarSalida() : void
}

class Cliente {
  +int id_cliente
  +string dni
  +string nombre
  +string correo
  +string telefono
  +bool estado
  --
  +alta() : Cliente
  +modificar(id) : Cliente
  +baja(id) : void
}

' ---- Relaciones ----
Rol "1" --> "0..*" Usuario : tiene
Rol "1" --> "0..*" Permiso : define
Usuario "1" --> "0..*" Venta : registra
Categoria "1" --> "0..*" Producto : clasifica
Venta "1" *-- "1..*" DetalleVenta : composicion
Producto "1" --> "0..*" DetalleVenta : aparece en
Producto "1" --> "0..*" RegistroInventario : movimientos
Usuario "1" --> "0..*" RegistroInventario : genera
Venta "1" --> "0..*" RegistroInventario : origina (salida)

@enduml
